<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="@dimen/ic_delete"
            android:layout_height="@dimen/ic_delete"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padd_10"
            android:src="@drawable/ic_action_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padd_10"
            android:layout_toLeftOf="@id/delete_icon"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textSize="13dp" />

    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/productCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="6dp"
        card_view:cardUseCompatPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivMas"
                android:layout_width="@dimen/cantidad"
                android:layout_height="@dimen/cantidad"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                card_view:layout_constraintBottom_toTopOf="@+id/ivMenos"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@drawable/ic_action_plusone"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/ivMenos"
                android:layout_width="@dimen/cantidad"
                android:layout_height="@dimen/cantidad"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/ivMas"
                card_view:srcCompat="@drawable/ic_action_minusone"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/tvNumeroUnidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="@+id/tvUnidades"
                card_view:layout_constraintStart_toStartOf="@+id/tvUnidades"
                card_view:layout_constraintTop_toBottomOf="@+id/tvUnidades" />

            <TextView
                android:id="@+id/tvUnidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unidades"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toTopOf="@+id/tvNumeroUnidades"
                card_view:layout_constraintEnd_toStartOf="@+id/ivMas"
                card_view:layout_constraintHorizontal_bias="0.5"
                card_view:layout_constraintStart_toEndOf="@+id/tvProducto"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNombreProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="@+id/tvProducto"
                card_view:layout_constraintStart_toStartOf="@+id/tvProducto"
                card_view:layout_constraintTop_toBottomOf="@+id/tvProducto" />

            <TextView
                android:id="@+id/tvProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toTopOf="@+id/tvNombreProducto"
                card_view:layout_constraintEnd_toStartOf="@+id/tvUnidades"
                card_view:layout_constraintHorizontal_bias="0.5"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivServed"
                android:layout_width="@dimen/cantidad"
                android:layout_height="@dimen/cantidad"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@drawable/ic_action_served"
                tools:ignore="VectorDrawableCompat" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>